@@ -244,9 +244,10 @@ public class MRAppBenchmark {
                           getContext().getApplicationAttemptId(),
                           request.getResponseId() + i);
                     containers.add(Container.newInstance(containerId,
-                      NodeId.newInstance("host" + containerId.getId(), 2345),
-                      "host" + containerId.getId() + ":5678",
-                      req.getCapability(), req.getPriority(), null));
+                        NodeId.newInstance(
+                            "host" + containerId.getContainerId(), 2345),
+                        "host" + containerId.getContainerId() + ":5678",
+                        req.getCapability(), req.getPriority(), null));
                   }
                 }
 
