@@ -348,6 +348,9 @@ Release 2.6.0 - UNRELEASED
     YARN-2583. Modified AggregatedLogDeletionService to be able to delete rolling
     aggregated logs. (Xuan Gong via zjshen)
 
+    YARN-2312. Deprecated old ContainerId#getId API and updated MapReduce to
+    use ContainerId#getContainerId instead. (Tsuyoshi OZAWA via jianhe)
+
   OPTIMIZATIONS
 
   BUG FIXES
